improve item builder to automatically colorize lore and name